[workspace]
resolver = "2"
members = [
    "crates/libsignal-core-syft",
    "crates/signal-crypto-syft",
    "crates/libsignal-protocol-syft",
]

[workspace.package]
authors = ["Signal Messenger LLC"]
license = "AGPL-3.0-only"
edition = "2024"
rust-version = "1.85"

[workspace.lints.clippy]
cast_possible_truncation = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(fuzzing)',
    'cfg(tokio_unstable)',
] }
