#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
description = "Vendored libsignal core crate for syft"
name = "libsignal-core-syft"
version = "0.85.3-beta.1"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
derive_more = { version = "2.0.0", features = ["from", "into", "try_from"] }
displaydoc = { version = "0.2.5" }
log = { version = "0.4.21" }
rand = { version = "0.9" }
sha2 = { version = "0.10" }
subtle = { version = "2.6" }
thiserror = { version = "2.0.11" }
uuid = { version = "1.5" }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }

[dev-dependencies]
assert_matches = { version = "1.5" }
boring = { version = "4.6.0", default-features = false }
boring-sys = { version = "4.6.0", default-features = false }
clap = { version = "4.4.11", features = ["derive"] }
const-str = { version = "0.6.2" }
criterion = { version = "0.5" }
foreign-types = { version = "0.5" }
hex = { version = "0.4.3" }
proptest = { version = "1.7" }

[[bench]]
name = "curve"
harness = false
