#
# Copyright (C) 2020-2022 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
description = "Vendored libsignal protocol crate for syft"
name = "libsignal-protocol-syft"
version = "0.85.3-beta.2"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2024"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
libsignal-core = { version = "0.85.3-beta.2", package = "libsignal-core-syft", path = "../libsignal-core-syft" }
signal-crypto = { version = "0.85.3-beta.2", package = "signal-crypto-syft", path = "../signal-crypto-syft" }

aes = { version = "0.8.3", features = ["zeroize"] }
aes-gcm-siv = { version = "0.11.1" }
assert_matches = { version = "1.5" }
async-trait = { version = "0.1.79" }
bitflags = { version = "2.9" }
const-str = { version = "0.6.2" }
ctr = { version = "0.9.2", features = ["zeroize"] }
data-encoding-macro = { version = "0.1.18" }
derive-where = { version = "1.2.7" }
derive_more = { version = "2.0.0", features = ["deref", "from", "into", "try_from"] }
displaydoc = { version = "0.2.5" }
hex = { version = "0.4.3" }
hkdf = { version = "0.12" }
hmac = { version = "0.12.0" }
indexmap = { version = "2.1.0" }
itertools = { version = "0.14.0" }
libcrux-ml-kem = { version = "0.0.2", default-features = false, features = ["kyber", "mlkem1024"] }
log = { version = "0.4.21" }
prost = { version = "0.13.5" }
rand = { version = "0.9" }
rayon = { version = "1.8.0" }
serde = { version = "1.0.203", features = ["derive"] }
sha2 = { version = "0.10" }
spqr = { version = "0.85.3-beta.2", package = "spqr-syft", path = "../spqr-syft" }
subtle = { version = "2.6" }
thiserror = { version = "2.0.11" }
uuid = { version = "1.5" }
zerocopy = { version = "0.8.24", features = ["derive"] }

[features]
kyber768 = ["libcrux-ml-kem/kyber", "libcrux-ml-kem/mlkem768"]
# ML-KEM matches the NIST standard version of Kyber. It may still change
# incompatibly until the final version of the standard is published and
# libsignal will update to match.
mlkem1024 = []

[dev-dependencies]
clap = { version = "4.4.11", features = ["derive"] }
criterion = { version = "0.5" }
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
env_logger = { version = "0.11.7" }
futures-util = { version = "0.3" }
proptest = { version = "1.7" }
rand_chacha = { version = "0.9" }
rand_core = { version = "0.9" }

[build-dependencies]
prost-build = { version = "0.13.5" }

[[bench]]
name = "session"
harness = false

[[bench]]
name = "ratchet"
harness = false

[[bench]]
name = "sealed_sender"
harness = false

[[bench]]
name = "kem"
harness = false
required-features = ["kyber768"]
