#
# Copyright (C) 2021 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "signal-crypto-syft"
version = "0.85.3-beta.1"
description = "Vendored libsignal crypto crate for syft"
authors.workspace = true
license.workspace = true
edition = "2024"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
libsignal-core = { version = "0.85.3-beta.1", package = "libsignal-core-syft", path = "../libsignal-core-syft" }

aes = { version = "0.8.3", features = ["zeroize"] }
cbc = { version = "0.1.2", features = ["std", "zeroize"] }
ctr = { version = "0.9.2", features = ["zeroize"] }
derive_more = { version = "2.0.0" }
displaydoc = { version = "0.2.5" }
ghash = { version = "0.5.0", features = ["zeroize"] }
hkdf = { version = "0.12" }
hmac = { version = "0.12.0", features = ["reset"] }
hpke-rs = { version = "0.3.0" }
hpke-rs-crypto = { version = "0.3.0" }
rand_chacha = { version = "0.9" }
rand_core = { version = "0.9" }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
subtle = { version = "2.6" }
thiserror = { version = "2.0.11" }

[dev-dependencies]
assert_matches = { version = "1.5" }
const-str = { version = "0.6.2" }
criterion = { version = "0.5" }
hex = { version = "0.4.3" }
rand = { version = "0.9" }
serde = { version = "1.0.203" }
serde_json = { version = "1.0.45" }

[[bench]]
name = "aes_gcm"
harness = false

[[bench]]
name = "hpke"
harness = false
